--- a/index.html
+++ b/index.html
@@ -4,23 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumiya</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="header">
-  <div class="atoms-wrapper">
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
-    <div class="header-atom"></div>
+  <!-- ВЕРХНИЙ БОКС -->
+<div class="top-ui-layer">
+  <!-- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО -->
+  <div class="top-bar">
+    <img src="images/logo.svg" alt="Логотип" class="logo">
+  </div>
+  <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
+  <div class="bottom-bar">
+    <div class="bottom-text">Придумал друга? Собери друга</div>
   </div>
 </div>
+  <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
+  <div class="face-layer">
+  <!-- ... БРОВИ ... -->
+    <div class="brows-row">
+  <div class="brows-strip">
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+  </div>
+</div>
+<!-- ... УШИ СЛЕВА ... -->
 <div class="sidebar">
   <div class="sidebar-atom"></div>
   <div class="sidebar-atom"></div>
@@ -29,15 +44,33 @@
   <div class="sidebar-atom"></div>
   <div class="sidebar-atom"></div>
 </div>
-<main class="main">
-    <aside class="left-main">
-        <div class="left-main-atom"></div>
-        <!-- ... несколько таких элементов ... -->
-    </aside>
-    <section class="right-main">
-        <div class="right-main-atom">Hello</div>
-        <div class="right-main-atom">World</div>
-    </section>
-</main>
+<!-- ... УШИ СПРАВА ... -->
+<div class="vertical-atoms-right">
+  <div class="vertical-atom"></div>
+  <div class="vertical-atom"></div>
+  <div class="vertical-atom"></div>
+  <div class="vertical-atom"></div>
+  <div class="vertical-atom"></div>
+  <div class="vertical-atom"></div>
+</div>
+<!-- ... ГЛАЗА СЛЕВА ... -->
+<div class="center-left-panel">
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+</div>
+<!-- ... ГЛАЗА СПРАВА ... -->
+<div class="center-right-panel">
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+</div>
+</div>
 </body>
 </html>
