--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
 </div>
+<!-- ... НОСЫ ... -->
+<div class="noses-row">
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+</div>
+<!-- ... РОТ И РУКИ ... -->
+<div class="mouth-container">
+  <div class="left-hand"></div>
+  <div class="mouth"></div>
+  <div class="right-hand"></div>
+</div>
 </div>
 </body>
 </html>
