--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
   <div class="mouth"></div>
   <div class="right-hand"></div>
 </div>
+<!-- ... БОКС С ДЕТАЛЯМИ ... -->
+<div class="details-row">
+  <div class="wings"></div>
+  <div class="tails"></div>
+  <div class="horns"></div>
+</div>
 </div>
 </body>
 </html>
