--- a/index.html
+++ b/index.html
@@ -87,12 +87,32 @@
   <div class="mouth"></div>
   <div class="right-hand"></div>
 </div>
+</div>
 <!-- ... БОКС С ДЕТАЛЯМИ ... -->
 <div class="details-row">
   <div class="wings"></div>
   <div class="tails"></div>
   <div class="horns"></div>
 </div>
+<!-- ПОСЛЕДНИЙ БЛОК -->
+<div class="final-section">
+  <!-- ... ВЕРХНИЙ ТЕКСТОВЫЙ БЛОК ... -->
+  <div class="final-bar top">
+    <div class="final-text">Собрал друга? Обними друга</div>
+  </div>
+
+  <!-- ... ПРОСТРАНСТВО ... -->
+  <div class="final-large-box"></div>
+
+  <!-- ... СРЕДНИЙ ТЕКСТОВЫЙ БЛОК ... -->
+  <div class="final-bar middle">
+    <div class="final-text">Собрал друга? Обними друга</div>
+  </div>
+
+  <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК ... -->
+  <div class="final-bar bottom">
+    <div class="final-text">Буракова Ольга БП25ДЗ12</div>
+  </div>
 </div>
 </body>
 </html>
