--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 
   <!-- ... ПРОСТРАНСТВО ... -->
   <div class="final-large-box"></div>
-
+  
   <!-- ... СРЕДНИЙ ТЕКСТОВЫЙ БЛОК ... -->
   <div class="final-bar middle">
     <div class="final-text">Собрал друга? Обними друга</div>
   </div>
 
-  <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК ... -->
+  <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК  -->
   <div class="final-bar bottom">
     <div class="final-text">Буракова Ольга БП25ДЗ12</div>
   </div>
