--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <div class="top-bar">
     <img src="images/logo.svg" alt="Логотип" class="logo">
   </div>
-  <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
+   <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
   <div class="bottom-bar">
+    <div class="bottom-text">Придумал друга? Собери друга</div>
     <div class="bottom-text">Придумал друга? Собери друга</div>
   </div>
 </div>
