--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="images/logo.svg" alt="Логотип" class="logo">
   </div>
    <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
-  <div class="bottom-bar">
-    <div class="bottom-text">Придумал друга? Собери друга</div>
-    <div class="bottom-text">Придумал друга? Собери друга</div>
-  </div>
+<!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
+<div class="bottom-bar">
+  <div class="bottom-text">Придумал друга? Собери друга</div>
+</div>
 </div>
   <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
   <div class="face-layer">
