--- a/index.html
+++ b/index.html
@@ -37,22 +37,22 @@
   </div>
 </div>
 <!-- ... УШИ СЛЕВА ... -->
-<div class="sidebar">
-  <div class="sidebar-atom"></div>
-  <div class="sidebar-atom"></div>
-  <div class="sidebar-atom"></div>
-  <div class="sidebar-atom"></div>
-  <div class="sidebar-atom"></div>
-  <div class="sidebar-atom"></div>
+<div class="ears-left">
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
 </div>
 <!-- ... УШИ СПРАВА ... -->
-<div class="vertical-atoms-right">
-  <div class="vertical-atom"></div>
-  <div class="vertical-atom"></div>
-  <div class="vertical-atom"></div>
-  <div class="vertical-atom"></div>
-  <div class="vertical-atom"></div>
-  <div class="vertical-atom"></div>
+<div class="ears-right">
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
 </div>
 <!-- ... ГЛАЗА СЛЕВА ... -->
 <div class="center-left-panel">
@@ -97,22 +97,42 @@
 </div>
 <!-- ПОСЛЕДНИЙ БЛОК -->
 <div class="final-section">
-  <!-- ... ВЕРХНИЙ ТЕКСТОВЫЙ БЛОК ... -->
-  <div class="final-bar top">
-    <div class="final-text">Собрал друга? Обними друга</div>
-  </div>
 
-  <!-- ... ПРОСТРАНСТВО ... -->
-  <div class="final-large-box"></div>
-  
-  <!-- ... СРЕДНИЙ ТЕКСТОВЫЙ БЛОК ... -->
-  <div class="final-bar middle">
-    <div class="final-text">Собрал друга? Обними друга</div>
+<!-- ВЕРХНИЙ БЛОК -->
+<div class="final-bar top">
+  <div class="marquee-wrapper">
+    <span>Собрал друга? Обними друга</span>
+    <span>Собрал друга? Обними друга</span>
+    <span>Собрал друга? Обними друга</span>
+    <span>Собрал друга? Обними друга</span>
+    <span>Собрал друга? Обними друга</span>
+    <span>Собрал друга? Обними друга</span>
   </div>
+</div>
 
+<!-- ... ПРОСТРАНСТВО ... -->
+<div class="final-large-box"></div>
+
+<!-- СРЕДНИЙ БЛОК -->
+<div class="final-bar middle">
+  <div class="marquee-wrapper">
+    <span>Обнял друга? Дружи с другом</span>
+    <span>Обнял друга? Дружи с другом</span>
+    <span>Обнял друга? Дружи с другом</span>
+    <span>Обнял друга? Дружи с другом</span>
+    <span>Обнял друга? Дружи с другом</span>
+    <span>Обнял друга? Дружи с другом</span>
+  </div>
+</div>
   <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК  -->
-  <div class="final-bar bottom">
-    <div class="final-text">Буракова Ольга БП25ДЗ12</div>
+<div class="final-bar bottom">
+  <div class="marquee-wrapper reverse">
+    <span>Буракова Ольга БП25ДЗ12</span>
+    <span>Буракова Ольга БП25ДЗ12</span>
+    <span>Буракова Ольга БП25ДЗ12</span>
+    <span>Буракова Ольга БП25ДЗ12</span>
+    <span>Буракова Ольга БП25ДЗ12</span>
+    <span>Буракова Ольга БП25ДЗ12</span>
   </div>
 </div>
 </body>
