--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
   </div>
    <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
 <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
+<!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
 <div class="bottom-bar">
   <div class="bottom-text">Придумал друга? Собери друга</div>
+</div>
 </div>
 </div>
   <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
@@ -36,7 +38,7 @@
     <div class="brows-row-atom"></div>
   </div>
 </div>
-<!-- ... УШИ СЛЕВА ... -->
+<!-- УШИ СЛЕВА -->
 <div class="ears-left">
   <div class="ear"></div>
   <div class="ear"></div>
@@ -44,9 +46,24 @@
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
+  <!-- ДУБЛИКАТЫ -->
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
 </div>
-<!-- ... УШИ СПРАВА ... -->
+
+<!-- УШИ СПРАВА -->
 <div class="ears-right">
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <div class="ear"></div>
+  <!-- ДУБЛИКАТЫ -->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
@@ -84,9 +101,20 @@
 </div>
 <!-- ... РОТ И РУКИ ... -->
 <div class="mouth-container">
-  <div class="left-hand"></div>
+  <!-- ЛЕВАЯ РУКА -->
+<div class="left-hand">
+  <div class="hand-layer hand-1"></div>
+  <div class="hand-layer hand-2"></div>
+  <div class="hand-layer hand-3"></div>
+</div>
+  <!-- РОТ -->
   <div class="mouth"></div>
-  <div class="right-hand"></div>
+<!-- ПРАВАЯ РУКА -->
+<div class="right-hand">
+  <div class="hand-layer hand-1"></div>
+  <div class="hand-layer hand-2"></div>
+  <div class="hand-layer hand-3"></div>
+</div>
 </div>
 </div>
 <!-- ... БОКС С ДЕТАЛЯМИ ... -->
