--- a/index.html
+++ b/index.html
@@ -40,13 +40,14 @@
 </div>
 <!-- УШИ СЛЕВА -->
 <div class="ears-left">
+  <!-- Основной набор -->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
-  <!-- ДУБЛИКАТЫ -->
+  <!-- Дубликат (ещё 6) -->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
@@ -71,7 +72,7 @@
   <div class="ear"></div>
   <div class="ear"></div>
 </div>
-<!-- ... ГЛАЗА СЛЕВА ... -->
+<!-- ГЛАЗА СЛЕВА -->
 <div class="center-left-panel">
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -79,8 +80,16 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
+  <!-- Дубликаты -->
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
 </div>
-<!-- ... ГЛАЗА СПРАВА ... -->
+
+<!-- ГЛАЗА СПРАВА -->
 <div class="center-right-panel">
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -88,9 +97,25 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
+  <!-- Дубликаты -->
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
+  <div class="panel-atom"></div>
 </div>
-<!-- ... НОСЫ ... -->
+<!-- НОСЫ -->
 <div class="noses-row">
+  <!-- Оригинал -->
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <div class="nose-atom"></div>
+  <!-- Дубликаты -->
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
