--- a/index.html
+++ b/index.html
@@ -24,8 +24,20 @@
   <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
   <div class="face-layer">
   <!-- ... БРОВИ ... -->
-    <div class="brows-row">
+  <div class="brows-row">
   <div class="brows-strip">
+    <!-- Оригинал (10) -->
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <div class="brows-row-atom"></div>
+    <!-- Дубликаты (ещё 10) -->
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
@@ -164,7 +176,16 @@
 </div>
 
 <!-- ... ПРОСТРАНСТВО ... -->
-<div class="final-large-box"></div>
+<div class="final-large-box">
+  <div class="face-slideshow">
+    <div class="face face1"></div>
+    <div class="face face2"></div>
+    <div class="face face3"></div>
+    <div class="face face4"></div>
+    <div class="face face5"></div>
+    <div class="face face6"></div>
+  </div>
+</div>
 
 <!-- СРЕДНИЙ БЛОК -->
 <div class="final-bar middle">
