--- a/index.html
+++ b/index.html
@@ -7,24 +7,38 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <!-- ВЕРХНИЙ БОКС -->
+
+  <!--- ВЕРХНИЙ БОКС --->
 <div class="top-ui-layer">
-  <!-- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО -->
+
+  <!--- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО --->
   <div class="top-bar">
     <img src="images/logo.svg" alt="Логотип" class="logo">
-  </div>
-   <!-- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ -->
 
+    <!--- ЗВЕЗДЫ --->
+  <img src="images/Big star.svg" alt="" class="deco-star big left-top">
+  <img src="images/little star.svg" alt="" class="deco-star little left-upper">
+  <img src="images/Big star.svg" alt="" class="deco-star big left-center">
+  <img src="images/little star.svg" alt="" class="deco-star little left-bottom">
+
+  <img src="images/Big star.svg" alt="" class="deco-star big right-top">
+  <img src="images/little star.svg" alt="" class="deco-star little right-upper">
+  <img src="images/Big star.svg" alt="" class="deco-star big right-center">
+  <img src="images/little star.svg" alt="" class="deco-star little right-bottom">
+  </div>
+
+   <!--- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ --->
 <div class="bottom-bar">
   <div class="bottom-text">Придумал друга? Собери друга</div>
 </div>
 </div>
-  <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
+
+  <!--- БОКС ДЛЯ ВСЕГО ЛИЦА --->
   <div class="face-layer">
-  <!-- ... БРОВИ ... -->
+
+  <!--- БРОВИ --->
   <div class="brows-row">
   <div class="brows-strip">
-    <!-- Оригинал (10) -->
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
@@ -35,7 +49,7 @@
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
-    <!-- Дубликаты (ещё 10) -->
+    <!--- ПОВТОР --->
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
     <div class="brows-row-atom"></div>
@@ -48,16 +62,16 @@
     <div class="brows-row-atom"></div>
   </div>
 </div>
-<!-- УШИ СЛЕВА -->
+
+<!--- УШИ СЛЕВА --->
 <div class="ears-left">
-  <!-- Основной набор -->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
-  <!-- Дубликат (ещё 6) -->
+ <!--- ПОВТОР --->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
@@ -66,7 +80,7 @@
   <div class="ear"></div>
 </div>
 
-<!-- УШИ СПРАВА -->
+<!--- УШИ СПРАВА --->
 <div class="ears-right">
   <div class="ear"></div>
   <div class="ear"></div>
@@ -74,7 +88,7 @@
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
-  <!-- ДУБЛИКАТЫ -->
+  <!--- ПОВТОР --->
   <div class="ear"></div>
   <div class="ear"></div>
   <div class="ear"></div>
@@ -82,7 +96,8 @@
   <div class="ear"></div>
   <div class="ear"></div>
 </div>
-<!-- ГЛАЗА СЛЕВА -->
+
+<!--- ГЛАЗА СЛЕВА --->
 <div class="center-left-panel">
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -90,7 +105,7 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
-  <!-- Дубликаты -->
+  <!--- ПОВТОР --->
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -99,7 +114,7 @@
   <div class="panel-atom"></div>
 </div>
 
-<!-- ГЛАЗА СПРАВА -->
+<!--- ГЛАЗА СПРАВА --->
 <div class="center-right-panel">
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -107,7 +122,7 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
-  <!-- Дубликаты -->
+  <!--- ПОВТОР --->
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
@@ -115,9 +130,9 @@
   <div class="panel-atom"></div>
   <div class="panel-atom"></div>
 </div>
-<!-- НОСЫ -->
+
+<!--- НОСЫ --->
 <div class="noses-row">
-  <!-- Оригинал -->
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
@@ -125,7 +140,7 @@
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
-  <!-- Дубликаты -->
+  <!--- ПОВТОР --->
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
@@ -134,17 +149,21 @@
   <div class="nose-atom"></div>
   <div class="nose-atom"></div>
 </div>
-<!-- ... РОТ И РУКИ ... -->
+
+<!--- РОТ И РУКИ --->
 <div class="mouth-container">
-  <!-- ЛЕВАЯ РУКА -->
+
+  <!--- ЛЕВАЯ РУКА --->
 <div class="left-hand">
   <div class="hand-layer hand-1"></div>
   <div class="hand-layer hand-2"></div>
   <div class="hand-layer hand-3"></div>
 </div>
-  <!-- РОТ -->
+
+  <!--- РОТ --->
   <div class="mouth"></div>
-<!-- ПРАВАЯ РУКА -->
+
+<!--- ПРАВАЯ РУКА --->
 <div class="right-hand">
   <div class="hand-layer hand-1"></div>
   <div class="hand-layer hand-2"></div>
@@ -152,16 +171,18 @@
 </div>
 </div>
 </div>
-<!-- ... БОКС С ДЕТАЛЯМИ ... -->
+
+<!--- БОКС С ДЕТАЛЯМИ --->
 <div class="details-row">
   <div class="wings"></div>
   <div class="tails"></div>
   <div class="horns"></div>
 </div>
-<!-- ПОСЛЕДНИЙ БЛОК -->
+
+<!--- ПОСЛЕДНИЙ БЛОК --->
 <div class="final-section">
 
-<!-- ВЕРХНИЙ БЛОК -->
+<!--- ВЕРХНИЙ БЛОК --->
 <div class="final-bar top">
   <div class="marquee-wrapper">
     <span>Собрал друга? Обними друга</span>
@@ -173,7 +194,7 @@
   </div>
 </div>
 
-<!-- ... ПРОСТРАНСТВО ... -->
+<!--- ПРОСТРАНСТВО --->
 <div class="final-large-box">
   <div class="face-slideshow">
     <div class="face face1"></div>
@@ -185,7 +206,7 @@
   </div>
 </div>
 
-<!-- СРЕДНИЙ БЛОК -->
+<!--- СРЕДНИЙ БЛОК --->
 <div class="final-bar middle">
   <div class="marquee-wrapper">
     <span>Обнял друга? Дружи с другом</span>
@@ -196,7 +217,8 @@
     <span>Обнял друга? Дружи с другом</span>
   </div>
 </div>
-  <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК  -->
+
+  <!--- НИЖНИЙ ТЕКСТОВЫЙ БЛОК  --->
 <div class="final-bar bottom">
   <div class="marquee-wrapper reverse">
     <span>Буракова Ольга БП25ДЗ12</span>
@@ -207,5 +229,6 @@
     <span>Буракова Ольга БП25ДЗ12</span>
   </div>
 </div>
+
 </body>
 </html>
