--- a/index.html
+++ b/index.html
@@ -7,228 +7,220 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- ВЕРХНИЙ БОКС -->
+  <div class="top-ui-layer">
+    <!-- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО -->
+    <div class="top-bar">
+      <img src="images/logo.svg" alt="Логотип" class="logo">
+    </div>
 
-  <!--- ВЕРХНИЙ БОКС --->
-<div class="top-ui-layer">
-
-  <!--- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО --->
-  <div class="top-bar">
-    <img src="images/logo.svg" alt="Логотип" class="logo">
-
-    <!--- ЗВЕЗДЫ --->
-  <img src="images/Big star.svg" alt="" class="deco-star big left-top">
-  <img src="images/little star.svg" alt="" class="deco-star little left-upper">
-  <img src="images/Big star.svg" alt="" class="deco-star big left-center">
-  <img src="images/little star.svg" alt="" class="deco-star little left-bottom">
-
-  <img src="images/Big star.svg" alt="" class="deco-star big right-top">
-  <img src="images/little star.svg" alt="" class="deco-star little right-upper">
-  <img src="images/Big star.svg" alt="" class="deco-star big right-center">
-  <img src="images/little star.svg" alt="" class="deco-star little right-bottom">
+    <div class="bottom-bar">
+      <div class="bar_in">
+        <!-- повторы блоков нужны для непрерывной бегущей строки -->
+        <span class="bottom-text">Придумал друга? Собери друга</span>
+        <span class="bottom-text">Придумал друга? Собери друга</span>
+        <span class="bottom-text">Придумал друга? Собери друга</span>
+        <span class="bottom-text">Придумал друга? Собери друга</span>
+      </div>
+    </div>
   </div>
 
-   <!--- ГОЛУБОЙ ПРЯМОУГОЛЬНИК С ТЕКСТОМ --->
-<div class="bottom-bar">
-  <div class="bottom-text">Придумал друга? Собери друга</div>
-</div>
-</div>
-
-  <!--- БОКС ДЛЯ ВСЕГО ЛИЦА --->
+  <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
   <div class="face-layer">
+    <!-- ... БРОВИ ... -->
+    <div class="brows-row">
+      <div class="brows-strip">
+        <!-- Основной набор -->
+        <div class="brow el-1"></div>
+        <div class="brow el-2"></div>
+        <div class="brow el-3"></div>
+        <div class="brow el-4"></div>
+        <div class="brow el-5"></div>
+        <div class="brow el-6"></div>
+        <div class="brow el-7"></div>
+        <div class="brow el-8"></div>
+        <div class="brow el-9"></div>
+        <div class="brow el-10"></div>
+        <!-- повторяем для зацыкливания строки -->
+        <div class="brow el-1"></div>
+        <div class="brow el-2"></div>
+        <div class="brow el-3"></div>
+        <div class="brow el-4"></div>
+        <div class="brow el-5"></div>
+        <div class="brow el-6"></div>
+        <div class="brow el-7"></div>
+        <div class="brow el-8"></div>
+        <div class="brow el-9"></div>
+        <div class="brow el-10"></div>
+        <!-- -->
+      </div>
+    </div>
+    <!-- УШИ СЛЕВА -->
+    <div class="ears-left">
+      <!-- Основной набор -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
+    </div>
 
-  <!--- БРОВИ --->
-  <div class="brows-row">
-  <div class="brows-strip">
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <!--- ПОВТОР --->
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
-    <div class="brows-row-atom"></div>
+    <!-- УШИ СПРАВА -->
+    <div class="ears-right">
+      <!-- Основной набор -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
+    </div>
+    <!-- ГЛАЗА СЛЕВА -->
+    <div class="center-left-panel">
+      <!-- Основной набор -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+    </div>
+
+    <!-- ГЛАЗА СПРАВА -->
+    <div class="center-right-panel">
+      <!-- Основной набор -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+    </div>
   </div>
-</div>
 
-<!--- УШИ СЛЕВА --->
-<div class="ears-left">
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
- <!--- ПОВТОР --->
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-</div>
+  <!-- НОСЫ -->
+  <div class="scroll-row">
+    <div class="noses-row">
+      <!-- Оригинал -->
+      <div class="nose el-1"></div>
+      <div class="nose el-2"></div>
+      <div class="nose el-3"></div>
+      <div class="nose el-4"></div>
+      <div class="nose el-5"></div>
+      <div class="nose el-6"></div>
+      <div class="nose el-7"></div>
 
-<!--- УШИ СПРАВА --->
-<div class="ears-right">
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <!--- ПОВТОР --->
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-  <div class="ear"></div>
-</div>
-
-<!--- ГЛАЗА СЛЕВА --->
-<div class="center-left-panel">
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <!--- ПОВТОР --->
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-</div>
-
-<!--- ГЛАЗА СПРАВА --->
-<div class="center-right-panel">
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <!--- ПОВТОР --->
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-  <div class="panel-atom"></div>
-</div>
-
-<!--- НОСЫ --->
-<div class="noses-row">
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <!--- ПОВТОР --->
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-  <div class="nose-atom"></div>
-</div>
-
-<!--- РОТ И РУКИ --->
-<div class="mouth-container">
-
-  <!--- ЛЕВАЯ РУКА --->
-<div class="left-hand">
-  <div class="hand-layer hand-1"></div>
-  <div class="hand-layer hand-2"></div>
-  <div class="hand-layer hand-3"></div>
-</div>
-
-  <!--- РОТ --->
-  <div class="mouth"></div>
-
-<!--- ПРАВАЯ РУКА --->
-<div class="right-hand">
-  <div class="hand-layer hand-1"></div>
-  <div class="hand-layer hand-2"></div>
-  <div class="hand-layer hand-3"></div>
-</div>
-</div>
-</div>
-
-<!--- БОКС С ДЕТАЛЯМИ --->
-<div class="details-row">
-  <div class="wings"></div>
-  <div class="tails"></div>
-  <div class="horns"></div>
-</div>
-
-<!--- ПОСЛЕДНИЙ БЛОК --->
-<div class="final-section">
-
-<!--- ВЕРХНИЙ БЛОК --->
-<div class="final-bar top">
-  <div class="marquee-wrapper">
-    <span>Собрал друга? Обними друга</span>
-    <span>Собрал друга? Обними друга</span>
-    <span>Собрал друга? Обними друга</span>
-    <span>Собрал друга? Обними друга</span>
-    <span>Собрал друга? Обними друга</span>
-    <span>Собрал друга? Обними друга</span>
+      <div class="nose el-1"></div>
+      <div class="nose el-2"></div>
+      <div class="nose el-3"></div>
+      <div class="nose el-4"></div>
+      <div class="nose el-5"></div>
+      <div class="nose el-6"></div>
+      <div class="nose el-7"></div>
+    </div>
   </div>
-</div>
 
-<!--- ПРОСТРАНСТВО --->
-<div class="final-large-box">
-  <div class="face-slideshow">
-    <div class="face face1"></div>
-    <div class="face face2"></div>
-    <div class="face face3"></div>
-    <div class="face face4"></div>
-    <div class="face face5"></div>
-    <div class="face face6"></div>
+  <!-- ... РОТ И РУКИ ... -->
+  <div class="scroll-row">
+    <div class="mouth-row">
+      <!-- ЛЕВАЯ РУКА -->
+      <div class="left-hand">
+        <div class="hand-layer hand-1"></div>
+        <div class="hand-layer hand-2"></div>
+        <div class="hand-layer hand-3"></div>
+      </div>
+      <!-- РОТ -->
+      <div class="mouth"></div>
+      <!-- ПРАВАЯ РУКА -->
+      <div class="right-hand">
+        <div class="hand-layer hand-1"></div>
+        <div class="hand-layer hand-2"></div>
+        <div class="hand-layer hand-3"></div>
+      </div>
+    </div>
   </div>
-</div>
 
-<!--- СРЕДНИЙ БЛОК --->
-<div class="final-bar middle">
-  <div class="marquee-wrapper">
-    <span>Обнял друга? Дружи с другом</span>
-    <span>Обнял друга? Дружи с другом</span>
-    <span>Обнял друга? Дружи с другом</span>
-    <span>Обнял друга? Дружи с другом</span>
-    <span>Обнял друга? Дружи с другом</span>
-    <span>Обнял друга? Дружи с другом</span>
+  <!-- ... БОКС С ДЕТАЛЯМИ ... -->
+  <div class="details-row">
+    <div class="wings"></div>
+    <div class="tails"></div>
+    <div class="horns"></div>
   </div>
-</div>
 
-  <!--- НИЖНИЙ ТЕКСТОВЫЙ БЛОК  --->
-<div class="final-bar bottom">
-  <div class="marquee-wrapper reverse">
-    <span>Буракова Ольга БП25ДЗ12</span>
-    <span>Буракова Ольга БП25ДЗ12</span>
-    <span>Буракова Ольга БП25ДЗ12</span>
-    <span>Буракова Ольга БП25ДЗ12</span>
-    <span>Буракова Ольга БП25ДЗ12</span>
-    <span>Буракова Ольга БП25ДЗ12</span>
+  <!-- ВЕРХНИЙ БЛОК -->
+  <div class="final-bar top">
+    <div class="marquee-wrapper">
+      <span>Собрал друга? Обними друга</span>
+      <span>Собрал друга? Обними друга</span>
+      <span>Собрал друга? Обними друга</span>
+      <span>Собрал друга? Обними друга</span>
+      <span>Собрал друга? Обними друга</span>
+      <span>Собрал друга? Обними друга</span>
+    </div>
   </div>
-</div>
 
+  <!-- ... ПРОСТРАНСТВО ... -->
+  <div class="final-large-box">
+    <div class="face-slideshow">
+      <div class="face face1"></div>
+      <div class="face face2"></div>
+      <div class="face face3"></div>
+      <div class="face face4"></div>
+      <div class="face face5"></div>
+      <div class="face face6"></div>
+    </div>
+  </div>
+
+  <!-- СРЕДНИЙ БЛОК -->
+  <div class="final-bar middle">
+    <div class="marquee-wrapper">
+      <span>Обнял друга? Дружи с другом</span>
+      <span>Обнял друга? Дружи с другом</span>
+      <span>Обнял друга? Дружи с другом</span>
+      <span>Обнял друга? Дружи с другом</span>
+      <span>Обнял друга? Дружи с другом</span>
+      <span>Обнял друга? Дружи с другом</span>
+    </div>
+  </div>
+    <!-- ... НИЖНИЙ ТЕКСТОВЫЙ БЛОК  -->
+  <div class="final-bar bottom">
+    <div class="marquee-wrapper reverse">
+      <span>Буракова Ольга БП25ДЗ12</span>
+      <span>Буракова Ольга БП25ДЗ12</span>
+      <span>Буракова Ольга БП25ДЗ12</span>
+      <span>Буракова Ольга БП25ДЗ12</span>
+      <span>Буракова Ольга БП25ДЗ12</span>
+      <span>Буракова Ольга БП25ДЗ12</span>
+    </div>
+  </div>
 </body>
 </html>
