--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="top-ui-layer">
     <!-- СИНИЙ ПРЯМОУГОЛЬНИК С ЛОГО -->
     <div class="top-bar">
-      <img src="images/logo.svg" alt="Логотип" class="logo">
+      <img src="images/Logo.svg" alt="Логотип" class="logo">
     </div>
 
     <div class="bottom-bar">
