--- a/index.html
+++ b/index.html
@@ -25,39 +25,47 @@
     </div>
   </div>
 
+  <!-- ... БРОВИ ... -->
+  <div class="brows-row">
+    <div class="brows-strip">
+      <!-- Основной набор -->
+      <div class="brow el-1"></div>
+      <div class="brow el-2"></div>
+      <div class="brow el-3"></div>
+      <div class="brow el-4"></div>
+      <div class="brow el-5"></div>
+      <div class="brow el-6"></div>
+      <div class="brow el-7"></div>
+      <div class="brow el-8"></div>
+      <div class="brow el-9"></div>
+      <div class="brow el-10"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="brow el-1"></div>
+      <div class="brow el-2"></div>
+      <div class="brow el-3"></div>
+      <div class="brow el-4"></div>
+      <div class="brow el-5"></div>
+      <div class="brow el-6"></div>
+      <div class="brow el-7"></div>
+      <div class="brow el-8"></div>
+      <div class="brow el-9"></div>
+      <div class="brow el-10"></div>
+      <!-- -->
+    </div>
+  </div>
+
   <!-- ... БОКС ДЛЯ ВСЕГО ЛИЦА ... -->
   <div class="face-layer">
-    <!-- ... БРОВИ ... -->
-    <div class="brows-row">
-      <div class="brows-strip">
-        <!-- Основной набор -->
-        <div class="brow el-1"></div>
-        <div class="brow el-2"></div>
-        <div class="brow el-3"></div>
-        <div class="brow el-4"></div>
-        <div class="brow el-5"></div>
-        <div class="brow el-6"></div>
-        <div class="brow el-7"></div>
-        <div class="brow el-8"></div>
-        <div class="brow el-9"></div>
-        <div class="brow el-10"></div>
-        <!-- повторяем для зацыкливания строки -->
-        <div class="brow el-1"></div>
-        <div class="brow el-2"></div>
-        <div class="brow el-3"></div>
-        <div class="brow el-4"></div>
-        <div class="brow el-5"></div>
-        <div class="brow el-6"></div>
-        <div class="brow el-7"></div>
-        <div class="brow el-8"></div>
-        <div class="brow el-9"></div>
-        <div class="brow el-10"></div>
-        <!-- -->
-      </div>
-    </div>
     <!-- УШИ СЛЕВА -->
     <div class="ears-left">
       <!-- Основной набор -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
       <div class="ear el-1"></div>
       <div class="ear el-2"></div>
       <div class="ear el-3"></div>
@@ -89,10 +97,24 @@
       <div class="ear el-4"></div>
       <div class="ear el-5"></div>
       <div class="ear el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
+      <div class="ear el-1"></div>
+      <div class="ear el-2"></div>
+      <div class="ear el-3"></div>
+      <div class="ear el-4"></div>
+      <div class="ear el-5"></div>
+      <div class="ear el-6"></div>
     </div>
     <!-- ГЛАЗА СЛЕВА -->
     <div class="center-left-panel">
       <!-- Основной набор -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
       <div class="eye el-1"></div>
       <div class="eye el-2"></div>
       <div class="eye el-3"></div>
@@ -111,6 +133,13 @@
     <!-- ГЛАЗА СПРАВА -->
     <div class="center-right-panel">
       <!-- Основной набор -->
+      <div class="eye el-1"></div>
+      <div class="eye el-2"></div>
+      <div class="eye el-3"></div>
+      <div class="eye el-4"></div>
+      <div class="eye el-5"></div>
+      <div class="eye el-6"></div>
+      <!-- повторяем для зацыкливания строки -->
       <div class="eye el-1"></div>
       <div class="eye el-2"></div>
       <div class="eye el-3"></div>
@@ -150,22 +179,20 @@
   </div>
 
   <!-- ... РОТ И РУКИ ... -->
-  <div class="scroll-row">
-    <div class="mouth-row">
-      <!-- ЛЕВАЯ РУКА -->
-      <div class="left-hand">
-        <div class="hand-layer hand-1"></div>
-        <div class="hand-layer hand-2"></div>
-        <div class="hand-layer hand-3"></div>
-      </div>
-      <!-- РОТ -->
-      <div class="mouth"></div>
-      <!-- ПРАВАЯ РУКА -->
-      <div class="right-hand">
-        <div class="hand-layer hand-1"></div>
-        <div class="hand-layer hand-2"></div>
-        <div class="hand-layer hand-3"></div>
-      </div>
+  <div class="mouth-row">
+    <!-- ЛЕВАЯ РУКА -->
+    <div class="left-hand">
+      <div class="hand-layer hand-1"></div>
+      <div class="hand-layer hand-2"></div>
+      <div class="hand-layer hand-3"></div>
+    </div>
+    <!-- РОТ -->
+    <div class="mouth"></div>
+    <!-- ПРАВАЯ РУКА -->
+    <div class="right-hand">
+      <div class="hand-layer hand-1"></div>
+      <div class="hand-layer hand-2"></div>
+      <div class="hand-layer hand-3"></div>
     </div>
   </div>
 
